--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1092,3 +1092,26 @@ outline: none;
     transform: scale(0) rotateZ(-90deg);
   }
 }
+.pagal{
+  border-radius: .5em;
+  transition: 0.3s;
+  color: #fff;
+  background: #2506ad;
+  box-shadow: 0px 5px 10px rgba(48, 68, 247, .6);
+  font-family: 'Nunito', sans-serif;
+  margin-top: 20px;
+  font-size: 1rem;
+  border-color: #2506ad;
+}
+  .pagal i {
+    margin-left: 0.3rem;
+    font-size: 1rem;
+    transition: 0.3s;
+  }
+  .pagal:hover{
+    background: #1a047e;
+  }
+  .pagal:hover i {
+    transform: translateX(5px);
+  }
+
